SERVER-61941 Make $sortArray comparator satisfy "Compare" requirement with -1 sort

(cherry picked from commit 6d0d66137f0217f6f9299e4af62daa0b507e9937)